client/src/components/Navbar/Navbar.module.css
.nav {
  display: flex;
  width: 100%;
  max-width: 1600px;
  box-sizing: border-box;
  height: 65px;
  padding: 0 2rem;
  border-bottom: 2px solid var(--gray-200);
}

.landingNav {
  height: 75px;
  background-color: inherit;
  border-bottom: 0px;
}

.logo {
  font-family: "Righteous";
  font-size: var(--FS-2xl);
  color: var(--newtBlue-500);
  line-height: 60px;
}

.logo:hover {
  color: var(--newtBlue-500);
}

.landingLogo {
  font-size: var(--FS-3xl);
  color: white;
}

.landingLogo:hover {
  color: white;
}

.navLink {
  color: var(--gray-700);
  font-size: var(--FS-lg);
}

.landingNavLink {
  color: white;
}

.activeNavLink,
.navLink:hover {
  color: var(--gray-700);
  font-weight: 600;
  border-bottom: 2px solid var(--gray-700);
}

.activeLandingNavLink,
.landingNavLink:hover {
  border-bottom: 2px solid white;
  color: white;
}

.signInBtn {
  background-color: white;
  color: var(--gray-700);
  font-size: var(--FS-base);
  border: 2px solid var(--gray-600);
}

.signInBtn:hover {
  background-color: var(--gray-600);
  color: white;
}

.landingSignInBtn {
  background-color: var(--newtBlue-500);
  color: white;
  font-size: var(--FS-base);
  font-weight: 500;
  border: 2px solid white;
}

.landingSignInBtn:hover {
  background-color: white;
  color: var(--newtBlue-500);
}

.toDash {
  margin-right: 0.5rem;
  font-size: var(--FS-base);
}

/* Bootstrap sm screen */
@media screen and (max-width: 576px) {
  .collapsedNavbar {
    background-color: var(--newtBlue-700);
    border-radius: 1rem;
    padding: 1rem;
  }
}

@media screen and (min-width: 640px) {
  .nav {
    padding: 0 4rem;
  }

  .logo {
    font-size: var(--FS-3xl);
    letter-spacing: 0.1rem;
  }

  .landingLogo {
    font-size: var(--FS-5xl);
  }

  .navLink {
    font-size: var(--FS-xl);
  }

  .toDash {
    margin-right: 1rem;
    font-size: var(--FS-base);
  }
}

@media screen and (min-width: 1440px) {
  .nav {
    justify-self: center;
    align-self: center;
  }
}

